@@ -1,3 +1,7 @@
+2004-05-28  Bruno Haible  <bruno@clisp.org>
+
+	* makemake.in: Treat GCC 4 like GCC 3.4.
+
 2004-05-28  Sam Steingold  <sds@gnu.org>
 
 	* init.lisp (open-for-load) [compiler]: recompile the bad file
